<resources>
    <string name="app_name">Notely</string>
    <string name="loading">Loading…</string>

    <string name="home">Home</string>
    <string name="all_notes">All notes</string>
    <string name="create_a_note">Create A Note</string>
    <string name="import_notes">Import Notes</string>
    <string name="create_first_note">Create Your First Note</string>
    <string name="first_note_content">Add a not about anything (your thoughts on climate change, or history essay) and share it with the world.</string>
    <string name="add_note">Add Note</string>

    <string name="your_note_title">Your note title</string>
    <string name="your_note_content">Your note content</string>
    <string name="edit_note">Edit Note</string>

    <string name="notely">NOTELY</string>
    <string name="user_name_default">Duy Minh Quan</string>
    <string name="address_default">Hoai Duc, Ha Noi</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="notifications">Notifications</string>
    <string name="logout">Logout</string>

    <string name="create_a_free_account">Create a free account</string>
    <string name="create_account_content">Join Notely for free. Create and share unlimited notes with your friend.</string>
    <string name="full_name">Full Name</string>
    <string name="your_full_name">Your full name</string>
    <string name="email_address">Email Address</string>
    <string name="your_email_address">Your email address</string>
    <string name="password">Password</string>
    <string name="your_password">Your password</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="create_an_account">Create an account</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="login_content">Add a note about anything and share it with the world.</string>
    <string name="get_started">Get Started</string>
    <string name="get_started_title">World’s Safest And Largest Digital Notebook</string>
    <string name="get_started_content">Notely is the world’s safest, largest and intelligent digital notebook. Join over 10M+ users already using Notely.</string>
    <string name="search_note">Search note</string>
    <string name="profile">Profile</string>
    <string name="teams">Teams</string>
    <string name="setting">Setting</string>
    <string name="save">Save note</string>
    <string name="delete">Delete note</string>
    <string name="edit">Edit</string>
</resources>