<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentGetStarted"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackgroundDefault"
    android:orientation="vertical"
    tools:context=".ui.login.GetStartedFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/titanone"
        android:text="@string/notely"
        android:textAlignment="center"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="17dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="45dp"
            android:src="@drawable/img_get_started" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/get_started_title"
            android:textAlignment="center"
            android:textColor="#403B36"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="13dp"
            android:fontFamily="@font/nunito_medium"
            android:text="@string/get_started_content"
            android:textAlignment="center"
            android:textColor="#403B36"
            android:textSize="18sp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="17dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/bg_button_rectangle_orange"
        android:fontFamily="@font/nunito_bold"
        android:padding="15dp"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textColor="#FFFBFA"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="17dp"
        android:layout_marginBottom="35dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/already_have_an_account"
        android:textAlignment="center"
        android:textColor="#D9614C"
        android:textSize="18sp" />
</LinearLayout>