<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentProfile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackgroundDefault"
    tools:context=".ui.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="35dp"
            android:fontFamily="@font/titanone"
            android:text="@string/notely"
            android:textAlignment="center"
            android:textSize="20sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="155dp"
            android:layout_height="155dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="25dp"
            android:backgroundTint="#E5D5C5"
            app:cardCornerRadius="90dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/iv_avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/img_avatar_default" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/nunito_bold"
            android:maxLines="1"
            android:text="@string/user_name_default"
            android:textAlignment="center"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/nunito_medium"
            android:maxLines="1"
            android:text="@string/address_default"
            android:textAlignment="center"
            android:textSize="17.5sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/ln_edit_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:layout_gravity="center"
                android:background="@drawable/bg_image_rectangle_white"
                android:padding="10dp"
                android:src="@drawable/ic_edit_profile" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="12dp"
                android:layout_weight="1"
                android:fontFamily="@font/nunito_medium"
                android:text="@string/edit_profile"
                android:textSize="19sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="19dp"
                android:layout_height="19dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_next" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ln_notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:layout_gravity="center"
                android:background="@drawable/bg_image_rectangle_white"
                android:padding="11dp"
                android:src="@drawable/ic_notifications" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="12dp"
                android:layout_weight="1"
                android:fontFamily="@font/nunito_medium"
                android:text="@string/notifications"
                android:textSize="19sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="19dp"
                android:layout_height="19dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_next" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ln_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:layout_gravity="center"
                android:background="@drawable/bg_image_rectangle_white"
                android:padding="12dp"
                android:src="@drawable/ic_logout" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="12dp"
                android:layout_weight="1"
                android:fontFamily="@font/nunito_medium"
                android:text="@string/logout"
                android:textSize="19sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="19dp"
                android:layout_height="19dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_next" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
