<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentNote"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackgroundDefault"
    android:orientation="vertical"
    tools:context=".ui.note.NoteFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/CustomToolbarStyle"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        app:menu="@menu/menu_edit_note"
        app:navigationIcon="@drawable/ic_back"
        app:title="Edit note">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/edit_note"
            android:textAlignment="center"
            android:textSize="17sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edt_note_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="8dp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/nunito_bold"
                    android:hint="@string/your_note_title"
                    android:inputType="text"
                    android:textColor="#403B36"
                    android:textCursorDrawable="@drawable/edt_large_cursor"
                    android:textSize="25sp"
                    tools:text="Cerebral" />

                <EditText
                    android:id="@+id/edt_note_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/nunito_medium"
                    android:hint="@string/your_note_content"
                    android:inputType="textMultiLine"
                    android:paddingBottom="20dp"
                    android:textColor="#403B36"
                    android:textCursorDrawable="@drawable/edt_small_cursor"
                    android:textSize="19sp"
                    android:textStyle="bold"
                    tools:text="Cerebral palsy sport classification is a classification system used by sports that include people with cerebral palsy (CP) with different degrees of severity to compete fairly against each other and against others with different types of disabilities. In general, Cerebral Palsy-International Sports and Recreation Association (CP-ISRA) serves as the body in charge of classification for cerebral palsy sport, though some sports have their own classification systems which apply to CP sportspeople." />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/ln_edit_layout"
            android:layout_width="160dp"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:background="#FFFDFA"
            android:elevation="2dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_edit_note"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:src="@drawable/ic_save" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/nunito_bold"
                    android:gravity="center"
                    android:text="@string/save"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_delete"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_edit_note"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:src="@drawable/ic_delete" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/nunito_bold"
                    android:gravity="center"
                    android:text="@string/delete"
                    android:textColor="@color/design_default_color_error"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>